fix: popup z-index

--- a/src/styles/Popup.css
+++ b/src/styles/Popup.css
@@ -1,4 +1,5 @@
 .popup {
+    z-index: 2;
     position: absolute;
     width: calc(5rem + 10.2 * 2.4rem);
     color: white;
